refactored most of the code. enabled mobile toggle button functionality. opens site url.

--- a/app/popup.html
+++ b/app/popup.html
@@ -22,7 +22,7 @@
                 <input type="radio" name="device-type" id="desktop-browsers" autocomplete="off" checked value="desktop"> Desktop
               </label>
               <label class="btn btn-primary">
-                <input type="radio" name="device-type" id="mobile-browsers" autocomplete="off" value="mobiles"> Mobiles
+                <input type="radio" name="device-type" id="mobile-browsers" autocomplete="off" value="mobile"> Mobiles
               </label>
             </div>
             <div class="form-group">
@@ -38,7 +38,7 @@
               <input type="text" id="url-select" name="url" class="form-control" placeholder="http://example.com"/>
             </div>
             <div class="form-group">
-              <a class="btn btn-primary" href="#">Go</a>
+              <a class="btn btn-primary" href="#" id="open-bs">Go</a>
             </div>
           </form>
         </div>
