added loader while ajax loads. added less support

--- a/app/popup.html
+++ b/app/popup.html
@@ -12,8 +12,8 @@
   <div class="popup-content">
     <div class="container">
       <div class="row">
-        <div class="col-sm-12 hidden" id="bs-loader">
-          loading...
+        <div class="col-sm-12" id="bs-loader-container">
+          <div class="bs-loader"></div>
         </div>
         <div class="col-sm-12 bs-app" id="bs-app">
           <form action="" id="bs-form">
