--- a/app/popup.html
+++ b/app/popup.html
@@ -19,28 +19,22 @@
           <form action="" id="bs-form">
             <div class="form-group text-center">
               <label>Desktop</label>
-              <input name="deviceType" id="device-type" type="checkbox"/>
+              <input name="deviceType" id="device-type" type="checkbox" checked="false"/>
               <label>Mobile</label>
             </div>
-            <div class="btn-group" data-toggle="buttons">
-              <label class="btn btn-primary active">
-                <input type="radio" name="device-type" id="desktop-browsers" autocomplete="off" checked value="desktop"> Desktop
-              </label>
-              <label class="btn btn-primary">
-                <input type="radio" name="device-type" id="mobile-browsers" autocomplete="off" value="mobile"> Mobiles
-              </label>
-            </div>
             <div class="form-group">
-              <label for="os-select">Operating System</label>
+              <!--<label for="os-select">Operating System</label>-->
               <input type="text" name="os" id="os-select" placeholder="Select an OS...">
             </div>
             <div class="form-group">
-              <label for="browser-select">Browser</label>
+              <!--<label for="browser-select">Browser</label>-->
               <input name="browser" id="browser-select" placeholder="Select a browser...">
             </div>
             <div class="form-group">
-              <label for="url-select">URL:</label>
-              <input type="text" id="url-select" name="url" class="form-control" placeholder="http://example.com"/>
+              <div class="input-group">
+                <span class="input-group-addon">Url:</span>
+                <input type="text" id="url-select" name="url" class="form-control" placeholder="http://example.com"/>
+              </div>
             </div>
             <div class="form-group">
               <a class="btn btn-primary" href="#" id="open-bs">Go</a>
