added some validation.

--- a/app/popup.html
+++ b/app/popup.html
@@ -55,6 +55,11 @@
       </div>
     </div>
   </div>
+  <ul class="errors-list">
+    <li id="os-error">Please select an OS</li>
+    <li id="browser-error">Please select a Browser/Device</li>
+    <li id="url-error">Please add a URL</li>
+  </ul>
   <script src="bower_components/jquery/dist/jquery.js"></script>
   <script src="bower_components/bootstrap/dist/js/bootstrap.js"></script>
   <script src="bower_components/select2/select2.js"></script>
